*2007/01/25
- prepared /usr/share/seedit/sepolicy/rbac-on
 - if this exists, rbac is enabled. This file is created/deleted by seedit-rbac

*2007/01/24
- Cleaned spec file 
- Modified path /usr/share/seedit/scripts -> /usr/share/seedit/initialize


*2007/01/19
- Cleaned Makefiles, removed unused flags
- Cleaned spec file

* 2007/01/18
- Clean up of spec file.
- Not include spec file and seedit.desktop file and seedit-gui.png in tar ball.
- Moved all distro specific files to policy subdir.

* 2007/01/09 
- Merged 3 spec files to 1 spec file(seedit.spec).
 -- So, there is only 1 src.rpm package "seedit"
    3 packages(seedit,seedit-policy,seedit-gui) are generated from this.
- Changed directory name of source files.
  seedit-converter -> core
  seedit-policy -> policy
  seedit-gui -> gui
- Changed rpm package name from seedit-converter -> seedit


*2006/12/28 Yuichi Nakamura 2.1.0 beta5
Fixed bug when generating policy for tmpfs access.
Fixed problem of seedit-gui.desktop, thanks to Pino Toscano. 
Added "Generate more policy" button to manage domain GUI. This will generate policy from RPM package.

*2006/11/6 Yuichi Nakamura 2.1.0 beta4
- Modified to eliminate warnings generated by rpmlint
changed install place, everything under /etc/seedit is now installed at /usr/share/seedit
- XML support is not included
- fixed bug in allownet(invalid syntax for nodecon)
- Changed install path of python lib to /usr/lib/python2.4/site-packages/

*2006/10/21 Yuichi Nakamura
-seedit-converter
Included Makefiles in config/makefiles
-seedit-policy:
Moved src/Makefile to seedit-converter

*2006/10/12 Yuichi Nakamura
 Improved performance of audit2spdl
 Guess fullpath in chroot environment

* 2006/10/09 Yuichi Nakamura
Modified to build base.pp 

*2006/10/4 Yuichi Nakamura
Add allowkey to SPDL for FC6

*2006/09/28 Yuichi Nakamura
- Modified to support MCS
- Generate base.pp

* 2006/09/26 
Merged language changes from Shane M. Coughlan.

* 2006/09/19 2.0.1
Fixed bug for Cent OS 4.