@@ -2,12 +2,13 @@
 
 #Fix these valuables for your environment
 VERSION=2.1.0
-BETA=-beta6.5
+BETA=-beta6.6
 DISTRO=fc6
 SAMPLE_POLICY_TYPE=fc6
 RELEASE=1
 PYTHON_VER=2.4
-AUDITCONF=\\/etc\\/audit\\/audit.rules
+AUDITCONF=\\%\\{_sysconfdir\\}\\/audit\\/audit.rules
+#AUDITCONF=\\%\\{_sysconfdir\\}\\/audit.rules
 MODULAR=y
 CUSTOMIZABLE_TYPES=y
 PAM_INCLUDE_SUPPORT=y
@@ -24,8 +25,15 @@ svn export $SVNROOT build
 
 cd build
 cat seedit.spec|sed -e "s/^%define distro.*\$/%define distro $DISTRO/"|sed -e "s/^%define auditrules.*\$/%define auditrules $AUDITCONF/"|sed -e "s/^%define modular.*\$/%define modular $MODULAR/"|sed -e "s/^%define python_ver.*\$/%define python_ver $PYTHON_VER/"|sed -e "s/^%define customizable_types.*\$/%define customizable_types $CUSTOMIZABLE_TYPES/"|sed -e "s/^%define pam_include_support.*\$/%define pam_include_support $PAM_INCLUDE_SUPPORT/"|sed -e "s/^%define sample_policy_type.*\$/%define sample_policy_type $SAMPLE_POLICY_TYPE/">seedit.spec.tmp
-
 mv seedit.spec.tmp seedit.spec
+
+if [ $PAM_INCLUDE_SUPPORT = "n" ]
+then
+cat seedit.spec|sed -e "s/^Requires:.*pam.*\$//">seedit.spec.tmp
+mv seedit.spec.tmp seedit.spec
+fi
+
+
 mv seedit.spec $RPMROOT/SPECS
 chmod 644 $RPMROOT/SPECS/seedit.spec
 cd ..
