@@ -8,6 +8,6 @@ Exec=/usr/bin/seedit-gui
 Type=Application
 Terminal=false
 Encoding=UTF-8
-Categories=Application;SystemSetup;X-Red-Hat-Base;
+Categories=System;Security
 X-Desktop-File-Install-Version=0.2
 StartupNotify=true
